frontend/src/index.css
@import 'tailwindcss';
@import '@heroui/styles';

* {
    @apply transition-all duration-200;
}

main {
    @apply pt-24 px-36 pb-16;
    @apply min-h-screen;
}

nav > * {
    @apply hover:drop-shadow-lg flex justify-center items-center gap-2;
}

nav svg {
    @apply size-4;
}

.clickable-no-scale {
    @apply cursor-pointer select-none;
}

.clickable {
    @apply cursor-pointer select-none;
    @apply hover:scale-105 origin-center;
}

